<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginHorizontal="20dp"
    android:gravity="center"
    android:orientation="vertical">

    <ImageView
        android:layout_width="300px"
        android:layout_height="300px"
        android:src="@drawable/barbie2"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:text="@string/name"
        android:layout_marginTop="10dp"/>

    <EditText
        android:id="@+id/etentername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/enter_name"/>

    <TextView
        android:id="@+id/tventerpassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:text="@string/enter_password"
        android:layout_marginTop="10dp"/>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <EditText
        android:id="@+id/etenter_password_hint"
        android:layout_width="0dp"
        android:layout_weight="31"
        android:layout_height="wrap_content"
        android:hint="@string/enter_password_hint"
        android:inputType="textPassword"
        />

    <ImageView
        android:id="@+id/ivPassword"
        android:layout_width="0dp"
        android:layout_weight="2"
        android:layout_marginStart="20dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:src="@drawable/baseline_alarm_on_24"
        />

</LinearLayout>

    <TextView
        android:id="@+id/tvconfirmpassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:text="@string/confirm_password"
        android:layout_marginTop="10dp"/>

    <EditText
        android:id="@+id/etreenterpassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/re_enter_password"
        android:inputType="textPassword"/>

    <Button
        android:id="@+id/buttonregiter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register_label"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:backgroundTint="@color/Pink"
        android:layout_marginBottom="36dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

</LinearLayout>

