<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginHorizontal="20dp"
    android:orientation="vertical">


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="300px"
        android:src="@drawable/barbie2" />

    <TextView
        android:id="@+id/tvname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/name"
        android:textColor="@color/black" />

    <EditText
        android:id="@+id/enter_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/enter_name" />

    <TextView
        android:id="@+id/tventerpassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/enter_password"
        android:textColor="@color/black" />

    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/enter_password_hint"
        android:inputType="textPassword"/>

    <CheckBox
        android:id="@+id/showPassCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Show Password" />

    <Button
        android:id="@+id/buttonlogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="36dp"
        android:backgroundTint="@color/Pink"
        android:text="@string/login_button"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/tvregister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="36dp"
        android:backgroundTint="@color/black"
        android:gravity="center"
        android:text="Don't have an account yet? Register here"
        android:textColor="@color/black"
        android:textSize="15sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_gravity="center"
        android:backgroundTint="@color/black"
        android:text="or sign up with"
        android:textColor="@color/black"
        android:textSize="15sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <ImageView
            android:layout_width="35dp"
            android:layout_height="40dp"
            android:src="@drawable/fb2" />

        <ImageView
            android:layout_width="35dp"
            android:layout_height="40dp"
            android:src="@drawable/gmail" />

        <ImageView
            android:layout_width="26dp"
            android:layout_height="40dp"
            android:src="@drawable/twitter" />

    </LinearLayout>

</LinearLayout>